--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
     <header class="page-header">
       <div class="page-header__container container">
         <!-- Хедер лого -->
-        <nav class="site-nav">
-          <a href="./index.html" class="site-nav__logo"
-            >Web<span class="site-nav__logo site-nav__logo_black site-nav__logo_position">Studio</span></a
+        <nav class="site-navigation">
+          <a href="./index.html" class="site-navigation__logo"
+            >Web<span class="site-navigation__logo site-navigation__logo_black site-navigation__logo_position"
+              >Studio</span
+            ></a
           >
 
           <!-- Навигація -->
@@ -55,7 +57,7 @@
 
         <!-- БУРГЕР -->
         <button class="burger-btn">
-          <svg class="burger-icon-icon" width="40px" height="40px">
+          <svg class="burger-btn__icon" width="40px" height="40px">
             <use href="./images/sprite.svg#icon-drop-menu"></use>
           </svg>
         </button>
