--- a/index.html
+++ b/index.html
@@ -55,12 +55,23 @@
           </ul>
         </nav>
 
-        <!-- БУРГЕР -->
+        <!-- MOBILE MENU START -->
         <button class="burger-btn">
           <svg class="burger-btn__icon" width="40px" height="40px">
             <use href="./images/sprite.svg#icon-drop-menu"></use>
           </svg>
         </button>
+
+        <div class="mobile-menu">
+          <button class="mobile-menu__btn">
+          <svg class="mobile-menu__icon" width="18px" height="18px">
+            <use href="./images/sprite.svg#icon-close-modal"></use>
+          </svg>
+        </button>
+        </div>
+        <!-- MOBILE MENU END -->
+        
+
 
         <!-- Контакти хедер -->
         <div class="header-contacts header__info">
@@ -88,7 +99,7 @@
 
     <main>
       <!-- Герой -->
-      <section class="hero section">
+      <!-- <section class="hero section">
         <div class="hero-content">
           <h1 class="hero-title">
             Эффективные решения <br />
@@ -96,10 +107,10 @@
           </h1>
           <button class="button-hero" data-modal-open type="button">Заказать услугу</button>
         </div>
-      </section>
+      </section> -->
 
       <!-- Переваги -->
-      <section class="features section">
+      <!-- <section class="features section">
         <div class="container">
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="features-list">
@@ -144,10 +155,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Напрямки діяльності -->
-      <section class="directions-title section">
+      <!-- <section class="directions-title section">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="directions">
@@ -173,10 +184,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Наша команда -->
-      <section class="section-team section">
+      <!-- <section class="section-team section">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team">
@@ -348,10 +359,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Компанія -->
-      <section class="section">
+      <!-- <section class="section">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="clients-list list clients-after-list">
@@ -405,16 +416,16 @@
           </ul>
         </div>
       </section>
-    </main>
+    </main> -->
 
     <!-- Футер -->
-    <footer class="page-footer">
+    <!-- <footer class="page-footer">
       <div class="container footer-info">
         <div>
-          <a href="./index.html" class="footer-logo">Web<span class="logo-white">Studio</span></a>
+          <a href="./index.html" class="footer-logo">Web<span class="logo-white">Studio</span></a> -->
 
           <!-- Адреса -->
-          <address class="adress-footer adress" id="contacts">
+          <!-- <address class="adress-footer adress" id="contacts">
             <ul class="">
               <li class="footer-adress">
                 <a href="/" class="adress-info">г. Киев, пр-т Леси Украинки, 26 </a>
@@ -464,9 +475,9 @@
               </a>
             </li>
           </ul>
-        </div>
+        </div> -->
 
-        <div class="footer-submit">
+        <!-- <div class="footer-submit">
           <form action="#">
             <p class="join">Подпишитесь на рассылку</p>
             <label>
@@ -483,7 +494,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- Модалка -->
     <div class="backdrop is-hidden" data-modal>
