--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 
         <!-- Контакти хедер -->
-        <div class="header-contacts header__info">
+        <!-- <div class="header-contacts header__info">
           <ul class="header-contacts__list">
             <li class="header-contacts__item header-contacts__item_position">
               <a href="mailto:info@devstudio.com" class="header-contacts__link">
@@ -95,7 +95,7 @@
           </ul>
         </div>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <!-- Герой -->
