--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
         <div class="mobile-menu">
           <button class="mobile-menu__btn">
-          <svg class="mobile-menu__icon" width="18px" height="18px">
-            <use href="./images/sprite.svg#icon-close-modal"></use>
+          <svg class="mobile-menu__icon" width="40px" height="40px">
+            <use href="./images/sprite.svg#icon-drop-cross"></use>
           </svg>
         </button>
         </div>
