--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </nav>
 
         <!-- MOBILE MENU START -->
-        <button class="burger-btn" data-menu-open>
+        <!-- <button class="burger-btn" data-menu-open>
           <svg class="burger-btn__icon" width="40px" height="40px">
             <use href="./images/sprite.svg#icon-drop-menu"></use>
           </svg>
@@ -68,7 +68,7 @@
             <use href="./images/sprite.svg#icon-drop-cross"></use>
           </svg>
         </button>
-        </div>
+        </div> -->
         <!-- MOBILE MENU END -->
         
 
