--- a/portfolio.html
+++ b/portfolio.html
@@ -34,12 +34,9 @@
     <header class="page-header">
       <div class="page-header__container container">
         <!-- Хедер лого -->
-        <nav class="site-nav">
-          <a href="./index.html" class="site-nav__logo"
-            >Web<span
-              class="
-                site-nav__logo site-nav__logo_black site-nav__logo_position
-              "
+        <nav class="site-navigation">
+          <a href="./index.html" class="site-navigation__logo"
+            >Web<span class="site-navigation__logo site-navigation__logo_black site-navigation__logo_position"
               >Studio</span
             ></a
           >
@@ -50,13 +47,7 @@
               <a href="./index.html" class="site-nav__link">Студия</a>
             </li>
             <li class="site-nav__item site-nav__item_position">
-              <a
-                href="./portfolio.html"
-                class="
-                  site-nav__link site-nav__link_current site-nav__link_line
-                "
-                >Портфолио</a
-              >
+              <a href="./portfolio.html" class="site-nav__link site-nav__link_current site-nav__link_line">Портфолио</a>
             </li>
             <li class="site-nav__item site-nav__item_position">
               <a href="#contacts" class="site-nav__link">Контакты</a>
@@ -69,11 +60,7 @@
           <ul class="header-contacts__list">
             <li class="header-contacts__item header-contacts__item_position">
               <a href="mailto:info@devstudio.com" class="header-contacts__link">
-                <svg
-                  class="header-contacts__icon header-contacts__icon_position"
-                  width="16px"
-                  height="12px"
-                >
+                <svg class="header-contacts__icon header-contacts__icon_position" width="16px" height="12px">
                   <use href="./images/sprite.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com</a
@@ -81,11 +68,7 @@
             </li>
             <li class="header-contacts__item header-contacts__item_position">
               <a href="tel:+380961111111" class="header-contacts__link">
-                <svg
-                  class="header-contacts__icon header-contacts__icon_position"
-                  width="10px"
-                  height="16px"
-                >
+                <svg class="header-contacts__icon header-contacts__icon_position" width="10px" height="16px">
                   <use href="./images/sprite.svg#icon-cell"></use>
                 </svg>
                 +38 096 111 11 11</a
@@ -125,16 +108,10 @@
           <ul class="projects">
             <li class="project-content">
               <div class="title-info-project">
-                <img
-                  src="./images/technocrack.jpg"
-                  alt="Технокряк"
-                  width="370"
-                  height="294"
-                />
+                <img src="./images/technocrack.jpg" alt="Технокряк" width="370" height="294" />
                 <p class="project-info-title">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
+                  Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                  цифрового шпионажа и атак на защищённые сервера конкурентов.
                 </p>
               </div>
               <div class="project-name">
@@ -145,38 +122,24 @@
 
             <li class="project-content">
               <div class="title-info-project">
-                <img
-                  src="./images/neworlan.jpg"
-                  alt="Постер"
-                  width="370"
-                  height="294"
-                />
+                <img src="./images/neworlan.jpg" alt="Постер" width="370" height="294" />
                 <p class="project-info-title">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
+                  Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                  цифрового шпионажа и атак на защищённые сервера конкурентов.
                 </p>
               </div>
               <div class="project-name">
-                <h3 class="project">
-                  Постер <span lang="en">New Orlean vs Golden Star</span>
-                </h3>
+                <h3 class="project">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
                 <p class="text-name">Дизайн</p>
               </div>
             </li>
 
             <li class="project-content">
               <div class="title-info-project">
-                <img
-                  src="./images/seafood.jpg"
-                  alt="Приложения"
-                  width="370"
-                  height="294"
-                />
+                <img src="./images/seafood.jpg" alt="Приложения" width="370" height="294" />
                 <p class="project-info-title">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
+                  Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                  цифрового шпионажа и атак на защищённые сервера конкурентов.
                 </p>
               </div>
               <div class="project-name">
@@ -187,16 +150,10 @@
 
             <li class="project-content">
               <div class="title-info-project">
-                <img
-                  src="./images/prime.jpg"
-                  alt="Проект Prime"
-                  width="370"
-                  height="294"
-                />
+                <img src="./images/prime.jpg" alt="Проект Prime" width="370" height="294" />
                 <p class="project-info-title">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
+                  Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                  цифрового шпионажа и атак на защищённые сервера конкурентов.
                 </p>
               </div>
               <div class="project-name">
@@ -207,16 +164,10 @@
 
             <li class="project-content">
               <div class="title-info-project">
-                <img
-                  src="./images/boxes.jpg"
-                  alt="Проект Boxes"
-                  width="370"
-                  height="294"
-                />
+                <img src="./images/boxes.jpg" alt="Проект Boxes" width="370" height="294" />
                 <p class="project-info-title">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
+                  Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                  цифрового шпионажа и атак на защищённые сервера конкурентов.
                 </p>
               </div>
               <div class="project-name">
@@ -227,16 +178,10 @@
 
             <li class="project-content">
               <div class="title-info-project">
-                <img
-                  src="./images/borders.jpg"
-                  alt="Inspiration has no Borders"
-                  width="370"
-                  height="294"
-                />
+                <img src="./images/borders.jpg" alt="Inspiration has no Borders" width="370" height="294" />
                 <p class="project-info-title">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
+                  Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                  цифрового шпионажа и атак на защищённые сервера конкурентов.
                 </p>
               </div>
               <div class="project-name">
@@ -247,16 +192,10 @@
 
             <li class="project-content">
               <div class="title-info-project">
-                <img
-                  src="./images/limitededition.jpg"
-                  alt="Издание Limited Edition"
-                  width="370"
-                  height="294"
-                />
+                <img src="./images/limitededition.jpg" alt="Издание Limited Edition" width="370" height="294" />
                 <p class="project-info-title">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
+                  Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                  цифрового шпионажа и атак на защищённые сервера конкурентов.
                 </p>
               </div>
               <div class="project-name">
@@ -267,16 +206,10 @@
 
             <li class="project-content">
               <div class="title-info-project">
-                <img
-                  src="./images/lab.jpg"
-                  alt="Проект LAB"
-                  width="370"
-                  height="294"
-                />
+                <img src="./images/lab.jpg" alt="Проект LAB" width="370" height="294" />
                 <p class="project-info-title">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
+                  Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                  цифрового шпионажа и атак на защищённые сервера конкурентов.
                 </p>
               </div>
               <div class="project-name">
@@ -287,16 +220,10 @@
 
             <li class="project-content">
               <div class="title-info-project">
-                <img
-                  src="./images/business.jpg"
-                  alt="Growing Business"
-                  width="370"
-                  height="294"
-                />
+                <img src="./images/business.jpg" alt="Growing Business" width="370" height="294" />
                 <p class="project-info-title">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
+                  Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                  цифрового шпионажа и атак на защищённые сервера конкурентов.
                 </p>
               </div>
               <div class="project-name">
@@ -313,29 +240,19 @@
     <footer class="page-footer">
       <div class="container footer-info">
         <div>
-          <a href="./index.html" class="footer-logo"
-            >Web<span class="logo-white">Studio</span></a
-          >
+          <a href="./index.html" class="footer-logo">Web<span class="logo-white">Studio</span></a>
 
           <!-- Адреса -->
           <address class="adress-footer adress" id="contacts">
             <ul>
               <li class="footer-adress">
-                <a class="adress-info" href="/"
-                  >г. Киев, пр-т Леси Украинки, 26
-                </a>
+                <a class="adress-info" href="/">г. Киев, пр-т Леси Украинки, 26 </a>
               </li>
               <li class="footer-adress">
-                <a
-                  href="mailto:info@devstudio.com"
-                  class="footer-contacts contacts-footer"
-                  >info@devstudio.com</a
-                >
+                <a href="mailto:info@devstudio.com" class="footer-contacts contacts-footer">info@devstudio.com</a>
               </li>
               <li class="footer-adress">
-                <a href="tel:+380961111111" class="footer-contacts tel"
-                  >+38 096 111 11 11</a
-                >
+                <a href="tel:+380961111111" class="footer-contacts tel">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
@@ -382,12 +299,7 @@
           <form action="#">
             <p class="join">Подпишитесь на рассылку</p>
             <label>
-              <input
-                type="email"
-                class="input-mail-footer"
-                name="user-email"
-                placeholder="E-mail"
-              />
+              <input type="email" class="input-mail-footer" name="user-email" placeholder="E-mail" />
             </label>
             <span class="icon-btn-footer">
               <button class="footer-btn" type="submit">
