--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
         </nav>
 
         <!-- MOBILE MENU START -->
-        <!-- <button class="burger-btn" data-menu-open>
+        <button class="burger-btn" data-menu-open>
           <svg class="burger-btn__icon" width="40px" height="40px">
             <use href="./images/sprite.svg#icon-drop-menu"></use>
           </svg>
         </button>
 
-        <div class="mobile-menu is-open" data-menu>
+        <!-- <div class="mobile-menu is-open" data-menu>
           <button class="mobile-menu__close" data-menu-close>
           <svg class="mobile-menu__icon" width="40px" height="40px">
             <use href="./images/sprite.svg#icon-drop-cross"></use>
