--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
           </svg>
         </button>
 
-        <!-- <div class="mobile-menu is-open" data-menu>
+        <div class="mobile-menu is-open" data-menu>
           <button class="mobile-menu__close" data-menu-close>
           <svg class="mobile-menu__icon" width="40px" height="40px">
             <use href="./images/sprite.svg#icon-drop-cross"></use>
           </svg>
         </button>
-        </div> -->
+        </div>
         <!-- MOBILE MENU END -->
         
 
