--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </svg>
         </button>
 
-        <div class="mobile-menu is-open" data-menu>
+        <div class="mobile-menu" data-menu>
           <button class="mobile-menu__close" data-menu-close>
           <svg class="mobile-menu__icon" width="40px" height="40px">
             <use href="./images/sprite.svg#icon-drop-cross"></use>
