--- a/index.html
+++ b/index.html
@@ -68,6 +68,45 @@
             <use href="./images/sprite.svg#icon-drop-cross"></use>
           </svg>
         </button>
+        
+
+        <div class="mobile">
+        <ul class="mobile-menu__nav">
+          <li class="mobile-menu__nav-item">
+            <a class="mobile-menu__nav-link mobile-menu__nav-link--current" href="./index.html">Студия</a>
+          </li>
+          <li class="mobile-menu__nav-item">
+            <a class="mobile-menu__nav-link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="mobile-menu__nav-item">
+            <a class="mobile-menu__nav-link" href="#">Контакты</a>
+          </li>
+        </ul>
+
+        <ul class="mobile-menu__contacts">
+          <li class="mobile-menu__contacts-item">
+            <a class="mobile-menu__contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+          <li class="mobile-menu__contacts-item">
+            <a class="mobile-menu__contacts-link mobile-menu__contacts-link--mail-theme" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+        </ul>
+
+        <ul class="social-mobile">
+          <li class="social-mobile__item">
+            <a class="social-mobile__link" href="#">Instagram</a>
+          </li>
+          <li class="social-mobile__item">
+            <a class="social-mobile__link" href="#">Twitter</a>
+          </li>
+          <li class="social-mobile__item">
+            <a class="social-mobile__link" href="#">Facebook</a>
+          </li>
+          <li class="social-mobile__item">
+            <a class="social-mobile__link" href="#">Linkedin</a>
+          </li>
+        </ul>
+        </div>
         </div>
         <!-- MOBILE MENU END -->
         
