--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 
     <main>
       <!-- Герой -->
+      <div class="container"></div>
       <section class="hero section">
         <div class="hero-content">
           <h1 class="hero-title">
