--- a/index.html
+++ b/index.html
@@ -141,9 +141,8 @@
 
     <main>
       <!-- Герой -->
-      <div class="container"></div>
       <section class="hero section">
-        <div class="hero-content">
+        <div class="hero-content container">
           <h1 class="hero-title">
             Эффективные решения <br />
             для вашего бизнеса
