--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <main>
       <!-- Герой -->
       <section class="hero section">
-        <div class="hero-content container">
+        <div class="hero-content ">
           <h1 class="hero-title">
             Эффективные решения <br />
             для вашего бизнеса
