--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       </section>
 
       <!-- Переваги -->
-      <!-- <section class="features section">
+      <section class="features section">
         <div class="container">
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="features-list">
@@ -197,7 +197,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Напрямки діяльності -->
       <!-- <section class="directions-title section">
