--- a/portfolio.html
+++ b/portfolio.html
@@ -55,6 +55,68 @@
           </ul>
         </nav>
 
+        <!-- MOBILE MENU START -->
+        <button class="burger-btn" data-menu-open>
+          <svg class="burger-btn__icon" width="40px" height="40px">
+            <use href="./images/sprite.svg#icon-drop-menu"></use>
+          </svg>
+        </button>
+
+        <div class="mobile-menu" data-menu>
+          <button class="mobile-menu__close" data-menu-close>
+            <svg class="mobile-menu__icon" width="40px" height="40px">
+              <use href="./images/sprite.svg#icon-drop-cross"></use>
+            </svg>
+          </button>
+
+          <div class="mobile-container">
+            <div class="mobile">
+              <ul class="mobile-menu__nav">
+                <li class="mobile-menu__nav-item">
+                  <a class="mobile-menu__nav-link" href="./index.html">Студия</a>
+                </li>
+                <li class="mobile-menu__nav-item">
+                  <a class="mobile-menu__nav-link mobile-menu__nav-link--current" href="./portfolio.html">Портфолио</a>
+                </li>
+                <li class="mobile-menu__nav-item">
+                  <a class="mobile-menu__nav-link" href="#">Контакты</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="mobile">
+              <ul class="mobile-menu__contacts">
+                <li class="mobile-menu__contacts-item">
+                  <a class="mobile-menu__contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+                <li class="mobile-menu__contacts-item">
+                  <a
+                    class="mobile-menu__contacts-link mobile-menu__contacts-link--mail-theme"
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+
+              <ul class="social-mobile">
+                <li class="social-mobile__item">
+                  <a class="social-mobile__link" href="#">Instagram</a>
+                </li>
+                <li class="social-mobile__item">
+                  <a class="social-mobile__link" href="#">Twitter</a>
+                </li>
+                <li class="social-mobile__item">
+                  <a class="social-mobile__link" href="#">Facebook</a>
+                </li>
+                <li class="social-mobile__item">
+                  <a class="social-mobile__link" href="#">Linkedin</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- MOBILE MENU END -->
+
         <!-- Контакти хедер -->
         <div class="header-contacts header__info">
           <ul class="header-contacts__list">
@@ -313,5 +375,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/mobile.js"></script>
   </body>
 </html>
