--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       </section>
 
       <!-- Напрямки діяльності -->
-      <!-- <section class="directions-title section">
+      <section class="directions-title section">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="directions">
@@ -226,7 +226,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Наша команда -->
       <!-- <section class="section-team section">
