--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
       </section>
 
       <!-- Наша команда -->
-      <!-- <section class="section-team section">
+      <section class="section-team section">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team">
@@ -401,7 +401,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Компанія -->
       <!-- <section class="section">
