--- a/index.html
+++ b/index.html
@@ -234,7 +234,27 @@
           <h2 class="section-title">Наша команда</h2>
           <ul class="team">
             <li class="team-images">
-              <img src="./images/productdesigner.jpg" alt="Игорь Демьяненко" width="450" height="460" />   
+              <picture>
+              <source media="(max-width: 767px)"
+                srcset="./images/team/mobile/team-1.webp 1x, ./images/team/mobile/team-1@2x 2x" 
+                type="image/webp">
+              <source media="(max-width: 767px)"
+                srcset="./images/team/mobile/team-1.jpg 1x, ./images/team/mobile/team-1@2x.jpg 2x">
+                
+              <source media="(max-width: 1199px)"
+                srcset="./images/team/tablet/team-1-tablet.webp 1x, ./images/team/tablet/team-1-tablet@2x.webp 2x" 
+                type="image/webp">
+              <source media="(max-width: 1199px)"
+                srcset="./images/team/tablet/team-1-tablet.jpg 1x, ./images/team/tablet/team-1-tablet@2x.jpg 2x">
+
+              <source media="(min-width: 1200px)"
+                srcset="./images/desktop/team1.webp 1x, ./images/desktop/team1@2x.webp 2x" 
+                type="image/webp">
+              <source media="(min-width: 1200px)"
+                srcset="./images/desktop/team1.jpg 1x, ./images/desktop/team1@2x.jpg 2x">
+                
+              <img src="#" alt="Игорь Демьяненко Product Designer"/>
+            </picture>   
               <div class="team-info">
                 <h3 class="title">Игорь Демьяненко</h3>
                 <p lang="en" class="text">Product Designer</p>
@@ -275,7 +295,7 @@
             </li>
 
             <li class="team-images">
-              <img src="./images/frontenddeveloper.jpg" alt="Ольга Репина" width="450" height="460" />
+              <img src="./images/frontenddeveloper.jpg" alt="Ольга Репина"/>
               <div class="team-info">
                 <h3 class="title">Ольга Репина</h3>
                 <p lang="en" class="text">Frontend Developer</p>
@@ -317,7 +337,7 @@
             </li>
 
             <li class="team-images">
-              <img src="./images/marketing.jpg" alt="Николай Тарасов" width="450" height="460" />
+              <img src="./images/marketing.jpg" alt="Николай Тарасов"/>
               <div class="team-info">
                 <h3 class="title">Николай Тарасов</h3>
                 <p lang="en" class="text">Marketing</p>
@@ -359,7 +379,7 @@
             </li>
 
             <li class="team-images">
-              <img src="./images/uidesigner.jpg" alt="Михаил Ермаков" width="450" height="460" />
+              <img src="./images/uidesigner.jpg" alt="Михаил Ермаков"/>
               <div class="team-info">
                 <h3 class="title">Михаил Ермаков</h3>
                 <p lang="en" class="text">UI Designer</p>
