--- a/index.html
+++ b/index.html
@@ -248,10 +248,10 @@
                 srcset="./images/team/tablet/team-1-tablet.jpg 1x, ./images/team/tablet/team-1-tablet@2x.jpg 2x">
 
               <source media="(min-width: 1200px)"
-                srcset="./images/desktop/team1.webp 1x, ./images/desktop/team1@2x.webp 2x" 
+                srcset="./images/team/desktop/team-1-desktop.webp, ./images/team/desktop/team-1-desktop@2x.webp 2x" 
                 type="image/webp">
               <source media="(min-width: 1200px)"
-                srcset="./images/desktop/team1.jpg 1x, ./images/desktop/team1@2x.jpg 2x">
+                srcset="./images/team/desktop/team-1-desktop.jpg 1x, ./images/team/desktop/team-1-desktop@2x.jpg 2x">
                 
               <img src="#" alt="Игорь Демьяненко Product Designer"/>
             </picture>   
