--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             <li class="team-images">
               <picture>
               <source media="(max-width: 767px)"
-                srcset="./images/team/mobile/team-1.webp 1x, ./images/team/mobile/team-1@2x 2x" 
+                srcset="./images/team/mobile/team-1.webp 1x, ./images/team/mobile/team-1@2x.webp 2x" 
                 type="image/webp">
               <source media="(max-width: 767px)"
                 srcset="./images/team/mobile/team-1.jpg 1x, ./images/team/mobile/team-1@2x.jpg 2x">
