--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             <li class="team-images">
               <picture>
                 <source media="(max-width: 767px)"
-                srcset="./images/team/mobile/team-2.webp 1x, ./images/team/mobile/team-2@2x 2x" 
+                srcset="./images/team/mobile/team-2.webp 1x, ./images/team/mobile/team-2@2x.webp 2x" 
                 type="image/webp">
               <source media="(max-width: 767px)"
                 srcset="./images/team/mobile/team-2.jpg 1x, ./images/team/mobile/team-2@2x.jpg 2x">
@@ -360,7 +360,7 @@
             <li class="team-images">
               <picture>
                 <source media="(max-width: 767px)"
-                srcset="./images/team/mobile/team-3.webp 1x, ./images/team/mobile/team-3@2x 2x" 
+                srcset="./images/team/mobile/team-3.webp 1x, ./images/team/mobile/team-3@2x.webp 2x" 
                 type="image/webp">
               <source media="(max-width: 767px)"
                 srcset="./images/team/mobile/team-3.jpg 1x, ./images/team/mobile/team-3@2x.jpg 2x">
@@ -422,7 +422,7 @@
             <li class="team-images">
               <picture>
                 <source media="(max-width: 767px)"
-                srcset="./images/team/mobile/team-4.webp 1x, ./images/team/mobile/team-4@2x 2x" 
+                srcset="./images/team/mobile/team-4.webp 1x, ./images/team/mobile/team-4@2x.webp 2x" 
                 type="image/webp">
               <source media="(max-width: 767px)"
                 srcset="./images/team/mobile/team-4.jpg 1x, ./images/team/mobile/team-4@2x.jpg 2x">
