--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
       </section>
 
       <!-- Компанія -->
-      <!-- <section class="section">
+      <section class="section">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="clients-list list clients-after-list">
@@ -539,7 +539,7 @@
           </ul>
         </div>
       </section>
-    </main> -->
+    </main>
 
     <!-- Футер -->
     <!-- <footer class="page-footer">
