--- a/index.html
+++ b/index.html
@@ -206,21 +206,42 @@
           <ul class="directions">
             <li class="directions-images">
               <div class="directions-info">
-                <img src="./images/handkeyboard.jpg" alt="Веб-сайты" width="370" height="294" />
+                <picture>
+                  <source media="(min-width: 1200px)"
+                srcset="./images/occupation/occ-1-desktop.webp, ./images/occupation/occ-1-desktop@2x.webp 2x" 
+                type="image/webp">
+              <source media="(min-width: 1200px)"
+                srcset="./images/occupation/occ-1-desktop.jpg 1x, ./images/occupation/occ-1-desktop@2x.jpg 2x">
+                <img src="#" alt="Десктопные приложения"/>
+                </picture>
                 <p class="directions-name">Десктопные приложения</p>
               </div>
             </li>
 
             <li class="directions-images">
               <div class="directions-info">
-                <img src="./images/handphone.jpg" alt="Приложения" width="370" height="294" />
+                <picture>
+                  <source media="(min-width: 1200px)"
+                srcset="./images/occupation/occ-2-desktop.webp, ./images/occupation/occ-2-desktop@2x.webp 2x" 
+                type="image/webp">
+              <source media="(min-width: 1200px)"
+                srcset="./images/occupation/occ-2-desktop.jpg 1x, ./images/occupation/occ-2-desktop@2x.jpg 2x">
+                <img src="#" alt="Мобильные приложения"/>
+                </picture>
                 <p class="directions-name">Мобильные приложения</p>
               </div>
             </li>
 
             <li class="directions-images">
               <div class="directions-info">
-                <img src="./images/handtablet.jpg" alt="Дизайн" width="370" height="294" />
+                <picture>
+                  <source media="(min-width: 1200px)"
+                srcset="./images/occupation/occ-3-desktop.webp, ./images/occupation/occ-3-desktop@2x.webp 2x" 
+                type="image/webp">
+              <source media="(min-width: 1200px)"
+                srcset="./images/occupation/occ-3-desktop.jpg 1x, ./images/occupation/occ-3-desktop@2x.jpg 2x">
+                <img src="#" alt="Дизайнерские решения"/>
+                </picture>
                 <p class="directions-name">Дизайнерские решения</p>
               </div>
             </li>
