--- a/index.html
+++ b/index.html
@@ -624,17 +624,15 @@
         <div class="footer-submit">
           <form action="#">
             <p class="join">Подпишитесь на рассылку</p>
-            <label>
+            <div class="icon-btn-footer">
               <input type="email" class="input-mail-footer" name="user-email" placeholder="E-mail" />
-            </label>
-            <span class="icon-btn-footer">
               <button class="footer-btn" type="submit">
                 Подписаться
                 <svg class="icon-telegram" width="24px" height="24px">
                   <use href="./images/sprite.svg#icon-send"></use>
                 </svg>
               </button>
-            </span>
+            </div>
           </form>
         </div>
       </div>
